2009-11-19	The InnoDB Team

	* CMakeLists.txt:
	Fix Bug#48317 cannot build innodb as static library

2009-11-18	The InnoDB Team

	* handler/handler0alter.cc:
	Fix Bug#48782 On lock wait timeout, CREATE INDEX (creating primary key)
	attempts DROP TABLE

2009-11-17	The InnoDB Team

	* handler/ha_innodb.cc, mysql-test/innodb.result,
	mysql-test/innodb.test, mysql-test/innodb_bug44369.result,
	mysql-test/innodb_bug44369.test, mysql-test/patches/innodb-index.diff,
	row/row0mysql.c:
	Report duplicate table names to the client connection, not to the
	error log.

2009-11-12	The InnoDB Team

	* handler/ha_innodb.cc, include/db0err.h, row/row0merge.c,
	row/row0mysql.c:
	Allow CREATE INDEX to be interrupted.
	Also, when CHECK TABLE is interrupted, report ER_QUERY_INTERRUPTED.

2009-11-11	The InnoDB Team

	* handler/ha_innodb.cc, mysql-test/innodb_bug47167.result,
	mysql-test/innodb_bug47167.test, mysql-test/innodb_file_format.result:
	Fix Bug#47167 "set global innodb_file_format_check" cannot set value
	by User-Defined Variable

2009-11-11	The InnoDB Team

	* include/os0file.h, os/os0file.c:
	Fix Bug#3139 Mysql crashes: 'windows error 995' after several selects
	on a large DB

2009-11-04	The InnoDB Team

	* handler/ha_innodb.cc:
	Fix Bug#32430 'show innodb status' causes errors
	Invalid (old?) table or database name in logs

2009-11-02	The InnoDB Team

	* btr/btr0sea.c, buf/buf0buf.c, dict/dict0dict.c, fil/fil0fil.c,
	ibuf/ibuf0ibuf.c, include/btr0sea.h, include/dict0dict.h,
	include/fil0fil.h, include/ibuf0ibuf.h, include/lock0lock.h,
	include/log0log.h, include/log0recv.h, include/mem0mem.h,
	include/mem0pool.h, include/os0file.h, include/pars0pars.h,
	include/srv0srv.h, include/thr0loc.h, include/trx0i_s.h,
	include/trx0purge.h, include/trx0rseg.h, include/trx0sys.h,
	include/trx0undo.h, include/usr0sess.h, lock/lock0lock.c,
	log/log0log.c, log/log0recv.c, mem/mem0dbg.c, mem/mem0pool.c,
	os/os0file.c, os/os0sync.c, os/os0thread.c, pars/lexyy.c,